--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/philip-bui/react-native-animated-loading-button.git"
+    "url": "git://github.com/philip-bui/react-native-animated-loading-button.git"
   },
   "homepage": "https://github.com/philip-bui/react-native-animated-loading-button#readme",
   "bugs": {
@@ -26,7 +26,7 @@
     "button"
   ],
   "publishConfig": {
-    "registry":"https://npm.pkg.github.com/"
+    "registry":"https://registry.npmjs.org/"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^0.0.5",
