--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: '10.x'
-        registry-url: 'https://registry.npmjs.org'
+        registry-url: <registry url>
     - run: yarn install
+    - run: yarn lint
     - run: yarn test
